<?xml version="1.0" encoding="utf-8"?>
<!--    android:background="@drawable/login_background"-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_background"
    android:orientation="vertical"
    tools:context=".activities.PrevLoginActivity">

    <ImageView
        android:id="@+id/email_username_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/email_password_background"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:hint="@string/prompt_email"
        android:textSize="11sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:boxBackgroundMode="none"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress"
        android:layout_marginTop="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/email_username_bg"/>

        <!--    android:id="@+id/password"-->
<!--        android:layout_marginTop="12.5dp"-->
    <EditText
        android:id="@+id/password"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:hint="@string/prompt_password"
        android:textSize="11sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"/>

    <CheckBox
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="42dp"
        android:layout_marginStart="13dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <TextView
        android:id="@+id/remind_me"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:text="@string/remind_me"
        android:lines="1"
        android:gravity="center"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="41dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"/>
<!--    app:layout_constraintVertical_bias="0.2"-->

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:text="@string/forgot_password"
        android:lines="1"
        android:gravity="center"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_gravity="start"
        android:layout_marginTop="118dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        android:backgroundTint="@drawable/login_button_background1"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/no_acc_register"
        android:layout_width="211dp"
        android:layout_height="20dp"
        android:text="@string/no_account_register"
        android:lines="1"
        android:gravity="center"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="@id/email_username_bg"
        app:layout_constraintEnd_toEndOf="@id/email_username_bg"
        app:layout_constraintTop_toBottomOf="@id/login"/>

    <Button
        android:id="@+id/register_start"
        android:layout_width="155dp"
        android:layout_height="42dp"
        android:layout_gravity="start"
        android:layout_marginTop="60dp"
        android:text="@string/start_register"
        android:textAllCaps="false"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        android:backgroundTint="@drawable/login_button_background1"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
<!--    </RelativeLayout>-->
<!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>