<?xml version="1.0" encoding="utf-8"?>
<!--    android:background="@drawable/login_background"-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_background"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <!-- app:layout_constraintTop_toTopOf="parent"-->
    <!--    android:layout_marginLeft="41dp"-->
    <!--    android:layout_alignParentLeft="true"-->
    <!--    android:layout_alignParentTop="true"-->
        <!-- android:id="@+id/username"-->
        <!--        android:layout_marginTop="96dp"-->
        <!--        android:selectAllOnFocus="true"-->
        <!--        android:layout_marginTop="12.5dp"-->

    <ImageView
        android:id="@+id/email_username_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/email_password_background"
        android:layout_marginTop="332dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:hint="@string/prompt_email"
        android:textSize="11sp"
        android:paddingStart="10dp"
        app:boxBackgroundMode="none"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress"
        android:layout_marginTop="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/email_username_bg"/>

        <!--    android:id="@+id/password"-->
<!--        android:layout_marginTop="12.5dp"-->
    <EditText
        android:id="@+id/password"
        android:layout_width="277dp"
        android:layout_height="45dp"
        android:hint="@string/prompt_password"
        android:textSize="11sp"
        android:paddingStart="10dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"/>

<!--    app:layout_constraintVertical_bias="0.2"-->
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="118dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        android:backgroundTint="@drawable/login_button_background1"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>