<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_background"
    android:id="@+id/Scroll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.login.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/username_password_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="294dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="294dp"
            android:background="@drawable/email_password_background" />

        <!--    android:id="@+id/password"-->
        <!--        android:layout_marginTop="12.5dp"-->

        <EditText
            android:id="@+id/username"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/username_password_bg"
            android:layout_alignTop="@+id/username_password_bg"
            android:layout_alignEnd="@+id/username_password_bg"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="11sp"
            android:textStyle="bold"
            app:boxBackgroundMode="none" />

        <EditText
            android:id="@+id/password"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/username_password_bg"
            android:layout_alignTop="@+id/username_password_bg"
            android:layout_alignEnd="@+id/username_password_bg"
            android:layout_marginStart="25dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:selectAllOnFocus="true"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <!--    app:layout_constraintVertical_bias="0.2"-->

        <CheckBox
            android:id="@+id/remind_me_checkbox"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/username_password_bg"
            android:layout_alignTop="@+id/username_password_bg"
            android:layout_alignEnd="@+id/username_password_bg"
            android:layout_marginStart="36dp"
            android:layout_marginTop="174dp"
            android:layout_marginEnd="248dp" />

        <TextView
            android:id="@+id/remind_me"
            android:layout_width="95dp"
            android:layout_height="32dp"
            android:layout_alignTop="@+id/username_password_bg"
            android:layout_alignEnd="@+id/username_password_bg"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="150dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/remind_me"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="88dp"
            android:layout_height="32dp"
            android:layout_alignStart="@+id/username_password_bg"
            android:layout_alignTop="@+id/username_password_bg"
            android:layout_alignEnd="@+id/username_password_bg"
            android:layout_marginStart="201dp"
            android:layout_marginTop="143dp"
            android:layout_marginEnd="34dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/login"
            android:layout_width="155dp"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/username_password_bg"
            android:layout_alignEnd="@+id/username_password_bg"
            android:layout_alignBottom="@+id/username_password_bg"
            android:layout_gravity="start"
            android:layout_marginStart="84dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="-10dp"
            android:backgroundTint="@drawable/login_button_background1"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/no_acc_register"
            android:layout_width="211dp"
            android:layout_height="20dp"
            android:layout_below="@+id/login"
            android:layout_alignStart="@+id/username_password_bg"
            android:layout_alignEnd="@+id/username_password_bg"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/no_account_register"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/username_password_bg"
            app:layout_constraintStart_toStartOf="@id/username_password_bg"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <ImageView
            android:id="@+id/registration_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_start"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="44dp"
            android:background="@drawable/registration_background" />

<!--        android:strokeWidth="2dp"-->
<!--        android:strokeColor="@color/black"-->
        <ImageView
            android:id="@+id/icon_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/registration_bg"
            android:layout_alignEnd="@+id/registration_bg"
            android:layout_alignTop="@+id/registration_bg"
            android:layout_marginStart="88dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="88dp"
            android:background="@drawable/ic_profile" />

        <Button
            android:id="@+id/register_start"
            android:layout_width="155dp"
            android:layout_height="48dp"
            android:layout_below="@+id/login"
            android:layout_alignStart="@+id/registration_bg"
            android:layout_alignEnd="@+id/registration_bg"
            android:layout_marginStart="84dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="84dp"
            android:backgroundTint="@drawable/login_button_background1"
            android:enabled="false"
            android:text="@string/start_register"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:cornerRadius="20dp" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </RelativeLayout>
</ScrollView>